<resources>

    <!-- other -->
    <string name="fb_login_protocol_scheme">fb1837278109867446</string>
    <string name="facebookButtonText">Zaloguj się</string>
    <string name="app_name">Where to go</string>
    <string name="facebook_app_id">1916989488513352</string>
    <string name="kontakt_io_api_key">USQmjRPWnCroBvsAIQkPLEarrfFrpiXB</string>
    <string name="google_maps_key">AIzaSyDzRlpwG_TS5FUES20wAFGIzcU0uEkEX54</string>
    <string name="server_api_key">be503ed4e9249384e58aad5d34ba46acbad352350b19050b7410ea1049dbef77</string>
    <string name="e_mail">pchwaleba@gmail.com</string>
    <string name="facebook_url">https://www.facebook.com/</string>
    <string name="download_info">Pobieranie treści...</string>
    <string name="empty_info">Jeszcze nic tu nie ma...</string>
    <string name="add_location_menu">Dodaj do trasy</string>
    <string name="remove_location_menu">Usuń z trasy</string>

    <!-- settings -->
    <string name="fragment_settings_colors_prompt">Kolor trasy</string>
    <string name="fragment_settings_measure_prompt">Jednostki odległości</string>
    <string name="fragment_settings_newsletter_title">Newsletter</string>
    <string name="fragment_settings_newsletter_info">Chcesz być na bieżąco z nowościami dotyczacymi
        aplikacji Where to go?</string>
    <string name="fragment_settings_map_style_title">Styl mapy</string>
    <string name="fragment_settings_map_standard">Standardowa</string>
    <string name="fragment_settings_map_retro">Retro</string>
    <string name="fragment_settings_map_dark">Ciemna</string>
    <string name="fragment_settings_color_title">Kolor trasy</string>
    <string name="fragment_settings_measure_title">Jednostki odległości</string>
    <string-array name="color_array">
        <item>Czerwony</item>
        <item>Zielony</item>
        <item>Niebieski</item>
    </string-array>
    <string-array name="measure_array">
        <item>Kilometry/Metry</item>
        <item>Mile/Stopy</item>
    </string-array>

    <!-- about us -->
    <string name="fragment_about_us_info">Aplikacja pomoże Ci zorganizować każdą trasę
    w sposób łatwy, szybki i intuicyjny. Twój podręczny przewodnik, zawsze pod reką.
    Szukaj miejsc w pobliżu (także wewnątrz budynków), poznaj opinie oraz oceny
    innych i stwórz swoją trasę. Już wiesz <Data><![CDATA[ <b>Where To Go</b> ]]> </Data> </string>
    <string name="fragment_about_us_facebook">Lubisz zwiedzać z nami?</string>
    <string name="fragment_about_us_mail">Może masz uwagi do działania aplikacji,
    podziel się tym z nami...</string>
    <string name="fragment_about_us_final_text">A teraz w drogę...</string>

    <!-- place  -->
    <string name="fragment_rating_place_add_opinion">Oceń i dodaj opinię...</string>
    <string name="refresh_button">Restart</string>
    <string name="something_wrong_info">Coś poszło nie tak...</string>

    <!-- add opinion -->
    <string name="add_opinion_error_info">Nie można dodać pustej opinii</string>
    <string name="add_opinion_hint">Dodaj opinię</string>
    <string name="add_opinion_rating_bar_title">Oceń miejsce</string>
    <string name="add_opinion_denied">Anuluj</string>
    <string name="add_opinion_send">Wyślij</string>

    <!-- fragment create route -->
    <string name="fragment_create_route_hint">Nazwa trasy</string>
    <string name="fragment_crate_route_add_place">+ Dodaj miejsce</string>
    <string name="fragment_create_route_button">Gotowe</string>
    <string name="opinion_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tellus enim, condimentum vel eros at, egestas molestie magna.</string>
    <string name="fragment_location_opinion_name">Jan Kowalski</string>
    <string name="fragment_location_events_name">Festiwal pizzy</string>
    <string name="fragment_location_events_place">Pizza Hut</string>
    <string name="fragment_location_events_description">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore</string>
    <string name="fragment_location_events_date">Termin: 01.02.2017r.</string>


    <string name="send_route_dialog_title">Wysyłanie trasy</string>
    <string name="send_route_dialog_info">Wysyłanie trasy proszę czekaj...</string>
    <string name="send_route_dialog_error">Nie można dodać trasy !</string>

    <string name="downloading_place_info">Nieznane miejsce w pobliżu. Informacje na temat tego miejsca
    są pobierane. Proszę poczekaj....</string>

    <string name="empty_route_error_info">Nie wybrano trasy!</string>

</resources>
