<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:padding="@dimen/fragment_location_events_padding">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/fragment_location_events_margin"
        android:text="@string/fragment_location_events_name"
        android:textSize="@dimen/fragment_location_events_name_size" />

    <TextView
        android:id="@+id/place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_marginBottom="@dimen/fragment_location_events_margin"
        android:text="@string/fragment_location_events_place"
        android:textSize="@dimen/fragment_location_events_place_size"
        android:textStyle="italic"/>

    <TextView
        android:id="@+id/eventDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/place"
        android:text="@string/fragment_location_events_description"
        android:textSize="@dimen/fragment_location_events_description_size"/>

    <TextView
        android:id="@+id/eventDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_location_events_date"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:textStyle="bold"/>
</RelativeLayout>